I'm terrible, just finished and haven't saved in a LONG time!

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
       </div>
     </div>
-    <div class="footer">
+    <footer>
       <div class="info">
       <span class="title">MY Times</span>
       <nav>
@@ -113,7 +113,7 @@
     <div class="copyright">
       © 2016, My Times (A Division of Codecademy bite)
     </div>
-    </div>
+  </footer>
 
   </body>
 </html>
